--- a/Navigation.API/appsettings.json
+++ b/Navigation.API/appsettings.json
@@ -6,8 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-
-  "ConnectionStrings": {
-    "ResourcesConnection": "Data Source=domain.com;"
-  }
+  "AllowedHosts": "*"
 }
