--- a/Resources.API/appsettings.json
+++ b/Resources.API/appsettings.json
@@ -6,5 +6,15 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "VehiclesCount": 25,
+
+  "Vehicles": {
+    "Count": 5
+  },
+
+  "ConnectionStrings": {
+    "ResourcesConnection": "Data Source=localhost;"
+  }
 }
