--- a/Resources.API/Resources.API.csproj
+++ b/Resources.API/Resources.API.csproj
@@ -7,6 +7,11 @@
   <ItemGroup>
     <ProjectReference Include="..\Resources.Domain\Resources.Domain.csproj" />
     <ProjectReference Include="..\Resources.Infrastructure\Resources.Infrastructure.csproj" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="8.6.1" />
+
+    <PackageReference Include="NLog.Web.AspNetCore" Version="4.9.0" />
+    <PackageReference Include="NLog" Version="4.6.7" />
+    <PackageReference Include="NSwag.AspNetCore" Version="13.2.2" />
   </ItemGroup>
 
 
