--- a/Resources.API/appsettings.json
+++ b/Resources.API/appsettings.json
@@ -3,7 +3,8 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.Hosting.Lifetime": "Information",
+      "Hangfire": "Information"
     }
   },
   "AllowedHosts": "*",
@@ -15,6 +16,7 @@
   },
 
   "ConnectionStrings": {
-    "ResourcesConnection": "Data Source=localhost;"
+    "ResourcesConnection": "Data Source=localhost;",
+    "HangfireConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=HangfireTest;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   }
 }
