--- a/Resources.API/Properties/launchSettings.json
+++ b/Resources.API/Properties/launchSettings.json
@@ -22,7 +22,7 @@
       "launchBrowser": true,
       "launchUrl": "api/vehicles",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Testing"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
