--- a/Resources.API/Resources.API.csproj
+++ b/Resources.API/Resources.API.csproj
@@ -12,6 +12,10 @@
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.9.0" />
     <PackageReference Include="NLog" Version="4.6.7" />
     <PackageReference Include="NSwag.AspNetCore" Version="13.2.2" />
+
+    <PackageReference Include="Hangfire.Core" Version="1.7.0" />
+    <PackageReference Include="Hangfire.SqlServer" Version="1.7.0" />
+    <PackageReference Include="Hangfire.AspNetCore" Version="1.7.0" />
   </ItemGroup>
 
 
