--- a/Resources.API/Resources.API.csproj
+++ b/Resources.API/Resources.API.csproj
@@ -8,6 +8,8 @@
     <ProjectReference Include="..\Resources.Domain\Resources.Domain.csproj" />
     <ProjectReference Include="..\Resources.Infrastructure\Resources.Infrastructure.csproj" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="8.6.1" />
+    <PackageReference Include="MediatR" Version="8.0.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.0.0" />
 
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.9.0" />
     <PackageReference Include="NLog" Version="4.6.7" />
