--- a/Resources.API/appsettings.json
+++ b/Resources.API/appsettings.json
@@ -16,7 +16,7 @@
   },
 
   "ConnectionStrings": {
-    "ResourcesConnection": "Data Source=localhost;",
+    "ResourcesConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=ResourcesDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
     "HangfireConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=HangfireTest;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   }
 }
